[package]
name = "food-ordering-bot"
version = "0.1.0"
authors = ["Dickson Tan <neurrone@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.6"
tokio-core = "0.1.17"
futures = "0.1.28"
